created components folder. created Layout component. established first route in app.js

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,17 @@ $primary-color: grey;
   font-family: 'Helvetica Neue';
   src: url('./assets/font/helvetica-neu.ttf') format('ttf');
 }
+
+@font-face {
+  font-family: 'La Belle Aurore';
+  src: url('./assets/font/LaBelleAurore.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Coolvetica';
+  src: url('./assets/font/CoolveticaRg-Regular.woff2') format('woff2');
+}
+
+input, textarea {
+  font-family: 'helvetica Neue';
+}
