--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -6,20 +6,96 @@
     top:0;
     z-index:3;
     min-height: 500px;
-}
 
-.logo {
-    display: block;
-    padding: 8px 0;
 
-    img {
+    .logo {
         display: block;
-        margin: 8px auto;
-        width:24px;
-        height: auto;
+        padding: 8px 0;
 
-        &.sub-logo {
-            width: 50px;
+        img {
+            display: block;
+            margin: 8px auto;
+            width:24px;
+            height: auto;
+
+            &.sub-logo {
+                width: 50px;
+            }
         }
+    }
+
+    nav {
+        display:block;
+        text-align: center;
+        position: absolute;
+        height: 210px;
+        top: 50%;
+        margin-top: -120px;
+        width:100%;
+
+        a {
+            display:block;
+            font-size: 22px;
+            color: #4d4d4e;
+            line-height: 51px;
+            height: 51px;
+            position: relative;
+            text-decoration: none;
+        
+
+            i {
+                transition: all 0.3s ease-out;
+            }
+
+            &:hover {
+                color: yellow;
+
+                svg {
+                    opacity: 0;
+                }
+
+                &:after {
+                    opacity: 1;
+                }
+            }
+
+            &:after {
+                display: block;
+                content: '';
+                font-size: 9px;
+                letter-spacing: 2px;
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                text-align: center;
+                opacity: 0;
+                transition: all 0.3 ease-out;
+            }
+
+            &:first-child {
+                &::after {
+                    content: 'HOME';
+                }
+            }
+        }   
+
+        a.about-link {
+            &::after {
+                content: 'ABOUT'
+            }
+        }
+
+        a.contact-link {
+            &::after {
+                content: 'CONTACT'
+            }
+        }
+
+        a.active {
+            svg {
+                color:#ffd700;
+            }
+        }
+        
     }
 }
